fix(): normalized whitespace on mobile/desktop devices for code

--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -1,4 +1,9 @@
 article[role=main] {
-  font-size: 1.25em;
-  color: $grey;
+  // color: $grey;
+}
+
+@media screen and (min-width: 769px) {
+  article[role=main] {
+    font-size: 1.25em;
+  }
 }
