--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -1,12 +1,12 @@
 body {
-  font-size: 1em;
-  overflow-wrap: break-word;
+  // font-size: 1em;
+  // overflow-wrap: break-word;
 }
 
 article[role=main] {
-  font-size: initial;
+  // font-size: initial;
 }
 
-.column.article-wrapper {
-  width: 75%;
-}
+// .column.article-wrapper {
+//   width: 75%;
+// }
